# AutoService-Cinnox

./: .autoservice-info.yaml  .gitignore  CLAUDE.md  Makefile  README.md  autoservice.local.sh  autoservice.sh  claude.sh  pyproject.toml
.artifacts/: registry.json
.artifacts/bootstrap/: bootstrap-report.md  env-report.json  manifest.json  test-baseline.json
.autoservice/: config.local.yaml.example  config.yaml  identity.yaml
.autoservice/flows/: _index.yaml  (+6 more)
.claude/: settings.json
.github/: CODEOWNERS
autoservice/: __init__.py  api_client.py  api_interfaces.py  cc_pool.py  cc_pool_cli.py  claude.py  config.py  core.py  crm.py  customer_manager.py  database.py  domain_config.py  domain_permission.py  domain_session.py  importer.py  logger.py  mock_db.py  permission.py  plugin_loader.py  session.py
channels/: __init__.py
docs/: API_ARCHITECTURE.md  ONBOARDING.md  SDK_PERFORMANCE_OPTIMIZATION.md  cc-pool.md  fork-registry.yaml
feishu/: channel-instructions.md  channel.py  channel_server.py
scripts/: chat_cli.py  refine.sh  register-fork.sh  sync-all.sh  sync-bridge.sh  sync-status.sh  sync.sh  unregister-fork.sh
socialware/: __init__.py  api_client.py  api_interfaces.py  claude.py  config.py  core.py  database.py  importer.py  logger.py  mock_db.py  permission.py  plugin_loader.py  pool.py  session.py
templates/: create-tenant.sh
tests/: integration_cc_pool.py  test_cc_pool.py  test_channel_client.py  test_channel_server.py  test_channel_tools.py  test_explain_command.py  test_pool_routing_e2e.py  test_web_relay.py
web/: app.py  websocket.py
(+77 files in other folders)
